restructuring; fixed polkit error; fixed style

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,14 @@
 
       "program": "${command:cmake.launchTargetPath}",
       "cwd": "${workspaceRoot}",
-      "environment": [],
+      "environment": [
+        // {
+        //   "name": "GTK_DEBUG",
+        //   "value": "all"
+        // }
+      ],
+
+      "preLaunchTask": "Build",
 
       "MIMode": "gdb",
       "setupCommands": [
