--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,40 +3,21 @@
 	"tasks": [
     {
       "type": "cmake",
-      "label": "CMake: build",
+      "label": "Build",
       "detail": "CMake template build task.",
 
       "command": "build",
 
-      "presentation": {
-        "echo": true,
-        "reveal": "silent",
-        "focus": false,
-        "close": false,
-        "revealProblems": "onProblem",
-        "clear": true
-      },
       "group": {
         "kind": "build",
         "isDefault": true
       },
-      "problemMatcher": []
-    },
-    {
-      "type": "shell",
-      "label": "CMake: clean",
-      "detail": "Clean the build output directory.",
-
-      "command": ["rm", "-rf", "${workspaceFolder}/build"],
-
       "presentation": {
         "echo": false,
         "reveal": "silent",
-        "focus": false,
-        "close": true,
-        "revealProblems": "never"
+        "showReuseMessage": false,
+        "clear": true
       },
-      "group": "none",
       "problemMatcher": []
     }
   ]
