--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,15 +1,15 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(gdb) Launch",
+      "name": "Launch shutdown-menu",
       "type": "cppdbg",
       "request": "launch",
 
+      "preLaunchTask": "Build",
+
       "program": "${command:cmake.launchTargetPath}",
+      // "args": ["--restart"],
       "cwd": "${workspaceRoot}",
       "environment": [
         // {
@@ -17,8 +17,6 @@
         //   "value": "all"
         // }
       ],
-
-      "preLaunchTask": "Build",
 
       "MIMode": "gdb",
       "setupCommands": [
