--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 include(GNUInstallDirs)
 
+set(_STYLESHEET_INSTALL_DIR "${CMAKE_INSTALL_DATADIR}/shutdown-menu")
+
 # include
 find_package(PkgConfig 0.29 REQUIRED)
 pkg_check_modules(
@@ -38,6 +40,7 @@ target_link_libraries(shutdown_menu
 target_compile_definitions(shutdown_menu
   PUBLIC
     DRY_RUN$<BUILD_INTERFACE:="--dry-run",>
+    STYLESHEET_DIR="$<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}>$<INSTALL_INTERFACE:${_STYLESHEET_INSTALL_DIR}>/"
 )
 
 add_subdirectory(src)
@@ -45,8 +48,17 @@ add_subdirectory(src)
 # install
 install(
   TARGETS shutdown_menu
-  # RUNTIME
-  #   DESTINATION ${CMAKE_INSTALL_BINDIR}
+  RUNTIME
+    DESTINATION ${CMAKE_INSTALL_BINDIR}
+)
+install(
+  FILES icon.png
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/icons/hicolor/48x48/apps/
+  RENAME shutdown-menu.png
+)
+install(
+  FILES stylesheet.css
+  DESTINATION _STYLESHEET_INSTALL_DIR
 )
 
 # uninstall
