--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,14 +4,58 @@
     {
       "type": "cmake",
       "label": "Build",
-      "detail": "CMake template build task.",
-
+      "detail": "CMake build task.",
       "command": "build",
-
       "group": {
         "kind": "build",
         "isDefault": true
       },
+      "presentation": {
+        "echo": false,
+        "reveal": "silent",
+        "showReuseMessage": false,
+        "clear": true
+      },
+      "problemMatcher": []
+    },
+    {
+      "type": "shell",
+      "label": "Install",
+      "detail": "CMake install task.",
+      "command": "/usr/bin/pkexec",
+      "args": [
+        "${config:cmake.cmakePath}",
+        "--build",
+        "${command:cmake.buildDirectory}",
+        "--config",
+        "${command:cmake.buildType}",
+        "--target",
+        "install",
+        "--"
+      ],
+      "presentation": {
+        "echo": false,
+        "reveal": "silent",
+        "showReuseMessage": false,
+        "clear": true
+      },
+      "problemMatcher": []
+    },
+    {
+      "type": "shell",
+      "label": "Uninstall",
+      "detail": "CMake uninstall task.",
+      "command": "/usr/bin/pkexec",
+      "args": [
+        "${config:cmake.cmakePath}",
+        "--build",
+        "${command:cmake.buildDirectory}",
+        "--config",
+        "${command:cmake.buildType}",
+        "--target",
+        "uninstall",
+        "--"
+      ],
       "presentation": {
         "echo": false,
         "reveal": "silent",
