--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,18 +1,33 @@
 {
-  // Use IntelliSense to learn about possible attributes.
-  // Hover to view descriptions of existing attributes.
-  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "(gdb) Launch",
-      "type": "cppdbg",
+      "name": "Python Debugger: Current File with Arguments",
+      "type": "debugpy",
       "request": "launch",
 
-      "program": "${command:cmake.launchTargetPath}",
-      "cwd": "${workspaceRoot}",
-      "environment": [],
+      "program": "shutdown-menu-keybind",
+      "args": "${command:pickArgs}",
 
+      "console": "integratedTerminal",
+      "justMyCode": false
+    },
+    {
+      "name": "Launch shutdown-menu",
+      "type": "cppdbg",
+      "request": "launch",
+      "preLaunchTask": "Build",
+      "program": "${command:cmake.launchTargetPath}",
+      "args": [
+        "--restart"
+      ],
+      "cwd": "${workspaceRoot}",
+      "environment": [
+        // {
+        //   "name": "GTK_DEBUG",
+        //   "value": "all"
+        // }
+      ],
       "MIMode": "gdb",
       "setupCommands": [
         {
