--- a/cmake/shutdown-menu-keybind.py.in
+++ b/cmake/shutdown-menu-keybind.py.in
@@ -2,208 +2,229 @@
 # PYTHON_ARGCOMPLETE_OK
 
 from gi.repository import Gio #type: ignore
-import dataclasses
+import typing
 import argparse, argcomplete
 import sys
 import re
 
+class MenuKeybinder:
+    # settings schema keys
+    KEY_CUSTOM_KEYBINDS     = "custom-keybindings";
+    KEY_BINDING             = "binding";
+    KEY_NAME                = "name";
+    KEY_COMMAND             = "command";
 
-KEY_CUSTOM_KEYBINDS     = "custom-keybindings";
-KEY_BINDING             = "binding";
-KEY_NAME                = "name";
-KEY_COMMAND             = "command";
+    # settings schema/paths
+    SCHEMA_MEDIA_KEYS       = "org.gnome.settings-daemon.plugins.media-keys";
+    SCHEMA_WM_KEYBINDINGS   = "org.gnome.desktop.wm.keybindings";
+    # yes here it is singular, not plural - idk why.
+    SCHEMA_CUSTOM_KEYBINDS  = SCHEMA_MEDIA_KEYS + ".custom-keybinding";
+    CUSTOM_KEYBIND_PATTERN  = "/" + SCHEMA_MEDIA_KEYS.replace('.', '/') + "/custom-keybindings/custom{}/";
 
-SCHEMA_MEDIA_KEYS       = "org.gnome.settings-daemon.plugins.media-keys";
-SCHEMA_WM_KEYBINDINGS   = "org.gnome.desktop.wm.keybindings";
-SCHEMA_CUSTOM_KEYBINDS  = SCHEMA_MEDIA_KEYS + ".custom-keybinding"; # NOTE: yes here it is singular, not plural - idk why.
+    # default values
+    DEFAULT_BINDING         = "<Alt>F3";
+    DEFAULT_NAME            = "Shutdown Menu"
+    DEFAULT_COMMAND         = "@_shutdown_command_location@";
 
-SHUTDOWN_MENU_BINDING   = "<Alt>F3";
-SHUTDOWN_MENU_NAME      = "Shutdown Menu"
-SHUTDOWN_MENU_COMMAND   = "@_shutdown_command_location@";
-CUSTOM_KEYBIND_PATTERN  = "/" + SCHEMA_MEDIA_KEYS.replace('.', '/') + "/custom-keybindings/custom{}/";
+    # argparse stuff
+    HandlerOptions          = typing.Literal["abort", "disable", "override"];
+    SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT = "Show this help message and exit."
 
-HANDLER_OPTION_ABORT    = "abort";
-HANDLER_OPTION_DISABLE  = "disable";
-HANDLER_OPTION_OVERRIDE = "override"
-
-SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT = "Show this help message and exit."
-
-
-def searchCustomKeys(customKeybinds: list[str], handler: str, binding: str) -> Gio.Settings | str:
-    customKeybindSettingsToBeDisabled: list[Gio.Settings] = [];
-    for customKeybind in customKeybinds:
-        customKeybindSetting = Gio.Settings.new_with_path(SCHEMA_CUSTOM_KEYBINDS, customKeybind);
-
-        customKeybindSettingName    = customKeybindSetting.get_string(KEY_NAME);
-        customKeybindSettingBinding = customKeybindSetting.get_string(KEY_BINDING);
-        if (customKeybindSettingName == SHUTDOWN_MENU_NAME):
-            if (customKeybindSettingBinding == binding):
-                return customKeybindSetting;
-            else:
-                if (handler == HANDLER_OPTION_ABORT):
-                    print(f"Got custom keybind \"{customKeybindSettingName}\" with binding {customKeybindSettingBinding}. Aborting.", file=sys.stderr)
-                    sys.exit(1);
-                elif (handler == HANDLER_OPTION_DISABLE):
-                    customKeybindSettingsToBeDisabled.append(customKeybindSetting);
-                else: # HANDLER_OPTION_OVERRIDE
-                    return customKeybindSetting
-        elif (customKeybindSetting.get_string(KEY_BINDING) == binding):
-            customKeybindSettingsToBeDisabled.append(customKeybindSetting);
-
-    for customKeybindSetting in customKeybindSettingsToBeDisabled:
-        print(f"Disabling custom keybind '{customKeybindSetting.get_string(KEY_NAME)}'.");
-        customKeybindSetting.set_string(KEY_BINDING, "");
-
-    pattern = re.compile(CUSTOM_KEYBIND_PATTERN.format("([0-9]+)"));
-    newCustomKeybindNr = max((int(pattern.match(customKeybind).group(1)) for customKeybind in customKeybinds)) + 1;
-    return CUSTOM_KEYBIND_PATTERN.format(newCustomKeybindNr);
-
-def disableWindowMakerKeybinds():
-    wmKeybindsSettings = Gio.Settings.new(SCHEMA_WM_KEYBINDINGS);
-    wmKeybinds = wmKeybindsSettings.props.settings_schema.list_keys();
-    for wmKeybind in wmKeybinds:
-        wmKeybindKey = wmKeybindsSettings.props.settings_schema.get_key(wmKeybind);
-        bindings = wmKeybindsSettings.get_strv(wmKeybind);
-
-        if (SHUTDOWN_MENU_BINDING in bindings):
-            print(f"Removing keybind {SHUTDOWN_MENU_BINDING} from {wmKeybindKey.get_name()}.");
-            bindings.remove(SHUTDOWN_MENU_BINDING);
-            wmKeybindsSettings.set_strv(wmKeybind, bindings);
-
-def enable(command: str, handler: str, binding: str):
-    mediaKeysSettings = Gio.Settings.new(SCHEMA_MEDIA_KEYS);
-    customKeybinds = mediaKeysSettings.get_strv(KEY_CUSTOM_KEYBINDS);
-    result = searchCustomKeys(customKeybinds, handler);
-    if (not isinstance(result, Gio.Settings)):
-        action = "Adding";
-        disableWindowMakerKeybinds();
-        newCustomKeybindSetting = Gio.Settings.new_with_path(SCHEMA_CUSTOM_KEYBINDS, result);
-    else:
-        action = "Updating";
-        newCustomKeybindSetting = result;
-
-    print(f"{action} keybind {newCustomKeybindSetting.props.path}")
-    newCustomKeybindSetting.set_string(KEY_NAME, SHUTDOWN_MENU_NAME);
-    newCustomKeybindSetting.set_string(KEY_COMMAND, command);
-    newCustomKeybindSetting.set_string(KEY_BINDING, binding);
-    newCustomKeybindSetting.sync();
-
-    mediaKeysSettings = Gio.Settings.new(SCHEMA_MEDIA_KEYS);
-    mediaKeysSettings.set_strv(KEY_CUSTOM_KEYBINDS, customKeybinds + [newCustomKeybindSetting.props.path]);
-    mediaKeysSettings.sync();
-
-def disable(binding: str, purge: bool):
-    mediaKeysSettings = Gio.Settings.new(SCHEMA_MEDIA_KEYS);
-    customKeybinds = mediaKeysSettings.get_strv(KEY_CUSTOM_KEYBINDS);
-    for customKeybind in customKeybinds:
-        customKeybindSettings = Gio.Settings.new_with_path(SCHEMA_CUSTOM_KEYBINDS, customKeybind);
-        if (customKeybindSettings.get_string(KEY_BINDING) == binding and
-            customKeybindSettings.get_string(KEY_NAME) == SHUTDOWN_MENU_NAME):
-            if (purge):
-                action = "Purging";
-                customKeybinds.remove(customKeybind);
-            else:
-                action = "Disabling";
-                customKeybindSettings.set_string(KEY_BINDING, "");
-            print(f"{action} custom keybind {customKeybindSettings.props.path}")
-            break;
-    mediaKeysSettings.set_strv(KEY_CUSTOM_KEYBINDS, customKeybinds);
-
-@dataclasses.dataclass
-class CliArguments:
-    subcommand: str;
-    command: str;
-    binding: str;
-    handler: str;
+    # cli argument declarations
+    subcommand: typing.Literal["enable", "disable"];
+    # general
+    entryCommand: str;
+    entryBinding: str;
+    entryName: str
+    # TODO: log
+    # enable
+    handler: HandlerOptions;
+    # disable
     purge: bool;
 
-def main():
-    parser = argparse.ArgumentParser(
-        "enable-shutdown-menu-keybind",
-        description="Installes and enables shutdown-menu keybinds or disables installed one.",
-        add_help=False,
-        formatter_class=argparse.ArgumentParser
-    );
-    parser.add_argument(
-        "--help", "-h",
-        action="help",
-        help=SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT
-    )
-    parser.add_argument(
-        "--binding",
-        action="store",
-        type=str,
-        default=SHUTDOWN_MENU_BINDING,
-        help="Alternative shutdown menu binding. Must be compatible with gsettings(1).",
-        dest="binding"
-    );
-    subcommandParsers = parser.add_subparsers(
-        dest="subcommand",
-        description="Available subcommands",
-        required=True,
-    );
-    disableSubcommandParserDescr = "Disable the keybind. This merely removes the key sequence from the entry unless --remove is given."
-    disableSubcommandParser = subcommandParsers.add_parser(
-        "disable",
-        aliases=["d"],
-        add_help=False,
-        help=disableSubcommandParserDescr,
-        description=disableSubcommandParserDescr
-    );
-    disableSubcommandParser.add_argument(
-        "--help", "-h",
-        action="help",
-        help=SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT
-    )
-    disableSubcommandParser.add_argument(
-        "--remove", "-r",
-        action="store_true",
-        help="Don't just disable but outright remove the keybind.",
-        dest="purge"
-    )
-    enableSubcommandParserDrescr = "Enable the keybind. This will add a new entry or modify an existing one. It will furthermore remove the key sequence from other keybinds."
-    enableSubcommandParser = subcommandParsers.add_parser(
-        "enable",
-        aliases=["e"],
-        add_help=False,
-        help=enableSubcommandParserDrescr,
-        description=enableSubcommandParserDrescr
-    )
-    enableSubcommandParser.add_argument(
-        "--help", "-h",
-        action="help",
-        help=SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT
-    )
-    enableSubcommandParser.add_argument(
-        "--command",
-        action="store",
-        type=str,
-        default=SHUTDOWN_MENU_COMMAND,
-        help="Alternative, absolute path to the shutdown-menu executable.",
-        dest="command"
-    );
-    enableSubcommandParser.add_argument(
-        "--problem-handler",
-        action="store",
-        type=str,
-        choices=[HANDLER_OPTION_DISABLE, HANDLER_OPTION_OVERRIDE, HANDLER_OPTION_ABORT],
-        default=HANDLER_OPTION_ABORT,
-        help=f"How to handle custom keybinds called \"{SHUTDOWN_MENU_NAME}\" that have a binding which is not {SHUTDOWN_MENU_BINDING}.",
-        dest="handler"
-    )
-    parser.epilog = (
-        "enable subcommand:\n"  + enableSubcommandParser.format_help() + "\n" +
-        "disable subcommand:\n" + disableSubcommandParser.format_usage()
-    )
+    @classmethod
+    def createArgumentParser(cls) -> argparse.ArgumentParser:
+        parser = argparse.ArgumentParser(
+            "shutdown-menu-keybind",
+            description="Installs and enables shutdown-menu keybinds or disables installed one.",
+            add_help=False,
+            formatter_class=argparse.ArgumentParser
+        );
+        parser.add_argument(
+            "--help", "-h",
+            action="help",
+            help=cls.SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT
+        )
+        parser.add_argument(
+            "--binding",
+            action="store",
+            type=str,
+            default=cls.DEFAULT_BINDING,
+            help="Alternative shutdown menu binding. Must be compatible with gsettings(1).",
+            dest="binding"
+        );
+        parser.add_argument(
+            "--command",
+            action="store",
+            type=str,
+            default=cls.DEFAULT_COMMAND,
+            help="Alternate, absolute path to the shutdown-menu executable.",
+            dest="command"
+        );
+        parser.add_argument(
+            "--name",
+            action="store",
+            type=str,
+            default=cls.DEFAULT_NAME,
+            help="Alternate name for the shutdown-menu keybind.",
+            dest="command"
+        );
+        subcommandParsers = parser.add_subparsers(
+            dest="subcommand",
+            description="Available subcommands",
+            required=True,
+        );
+        disableSubcommandParserDescr = "Disable the keybind. This merely removes the key sequence from the entry unless --remove is given."
+        disableSubcommandParser = subcommandParsers.add_parser(
+            "disable",
+            aliases=["d"],
+            add_help=False,
+            help=disableSubcommandParserDescr,
+            description=disableSubcommandParserDescr
+        );
+        disableSubcommandParser.add_argument(
+            "--help", "-h",
+            action="help",
+            help=cls.SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT
+        );
+        disableSubcommandParser.add_argument(
+            "--remove", "-r",
+            action="store_true",
+            help="Don't just disable but outright remove the keybind.",
+            dest="purge"
+        );
+        enableSubcommandParserDrescr = "Enable the keybind. This will add a new entry or modify an existing one. It will furthermore remove the key sequence from other keybinds."
+        enableSubcommandParser = subcommandParsers.add_parser(
+            "enable",
+            aliases=["e"],
+            add_help=False,
+            help=enableSubcommandParserDrescr,
+            description=enableSubcommandParserDrescr
+        );
+        enableSubcommandParser.add_argument(
+            "--help", "-h",
+            action="help",
+            help=cls.SHOW_HELP_STRING_BECAUSE_THE_DEFAULT_AINT_QUITE_RIGHT
+        );
+        handlerOptions = typing.get_args(cls.HandlerOptions);
+        enableSubcommandParser.add_argument(
+            "--problem-handler",
+            action="store",
+            type=str,
+            choices=handlerOptions,
+            default=handlerOptions[0],
+            help=f"How to handle custom keybinds with a mathing name that have a non-matching binding.",
+            dest="handler"
+        );
+        parser.epilog = (
+            "enable subcommand:\n"  + enableSubcommandParser.format_help() + "\n" +
+            "disable subcommand:\n" + disableSubcommandParser.format_usage()
+        );
 
-    argcomplete.autocomplete(parser);
-    arguments: CliArguments = parser.parse_args();
+        return parser;
 
-    if (arguments.subcommand == "disable"):
-        disable(arguments.binding, arguments.purge);
-    else:
-        enable(arguments.command, arguments.handler, arguments.binding);
+    def _searchCustomKeys(self, customKeybinds: list[str]) -> Gio.Settings | str | None:
+        customKeybindSettingsToBeDisabled: list[Gio.Settings] = [];
+        for customKeybind in customKeybinds:
+            customKeybindSetting = Gio.Settings.new_with_path(self.SCHEMA_CUSTOM_KEYBINDS, customKeybind);
 
+            customKeybindSettingName    = customKeybindSetting.get_string(self.KEY_NAME);
+            customKeybindSettingBinding = customKeybindSetting.get_string(self.KEY_BINDING);
+            if (customKeybindSettingName == self.entryName):
+                if (customKeybindSettingBinding == self.entryBinding):
+                    return customKeybindSetting;
+                else:
+                    if (self.handler == "abort"):
+                        print(f"Got custom keybind \"{customKeybindSettingName}\" with binding {customKeybindSettingBinding}. Aborting.", file=sys.stderr)
+                        return None;
+                    elif (self.handler == "disable"):
+                        customKeybindSettingsToBeDisabled.append(customKeybindSetting);
+                    else: # override
+                        return customKeybindSetting
+            elif (customKeybindSetting.get_string(self.KEY_BINDING) == self.entryBinding):
+                customKeybindSettingsToBeDisabled.append(customKeybindSetting);
+
+        for customKeybindSetting in customKeybindSettingsToBeDisabled:
+            print(f"Disabling custom keybind '{customKeybindSetting.get_string(self.KEY_NAME)}'.");
+            customKeybindSetting.set_string(self.KEY_BINDING, "");
+
+        pattern = re.compile(self.CUSTOM_KEYBIND_PATTERN.format("([0-9]+)"));
+        newCustomKeybindNr = max((int(pattern.match(customKeybind).group(1)) for customKeybind in customKeybinds)) + 1;
+        return self.CUSTOM_KEYBIND_PATTERN.format(newCustomKeybindNr);
+
+    def _disableWindowMakerKeybinds(self):
+        wmKeybindsSettings = Gio.Settings.new(self.SCHEMA_WM_KEYBINDINGS);
+        wmKeybinds = wmKeybindsSettings.props.settings_schema.list_keys();
+        for wmKeybind in wmKeybinds:
+            wmKeybindKey = wmKeybindsSettings.props.settings_schema.get_key(wmKeybind);
+            bindings = wmKeybindsSettings.get_strv(wmKeybind);
+
+            if (self.entryBinding in bindings):
+                print(f"Removing keybind {self.entryBinding} from {wmKeybindKey.get_name()}.");
+                bindings.remove(self.entryBinding);
+                wmKeybindsSettings.set_strv(wmKeybind, bindings);
+
+    def enable(self, mediaKeysSettings: Gio.Settings) -> int:
+        mediaKeysSettings = Gio.Settings.new(self.SCHEMA_MEDIA_KEYS);
+        customKeybinds = mediaKeysSettings.get_strv(self.KEY_CUSTOM_KEYBINDS);
+        result = self._searchCustomKeys(customKeybinds);
+        if (result is None):
+            return 1;
+        elif (not isinstance(result, Gio.Settings)):
+            action = "Adding";
+            self._disableWindowMakerKeybinds();
+            newCustomKeybindSetting = Gio.Settings.new_with_path(self.SCHEMA_CUSTOM_KEYBINDS, result);
+        else:
+            action = "Updating";
+            newCustomKeybindSetting = result;
+
+        print(f"{action} keybind {newCustomKeybindSetting.props.path}")
+        newCustomKeybindSetting.set_string(self.KEY_NAME, self.entryName);
+        newCustomKeybindSetting.set_string(self.KEY_COMMAND, self.entryCommand);
+        newCustomKeybindSetting.set_string(self.KEY_BINDING, self.entryBinding);
+        newCustomKeybindSetting.sync();
+
+        mediaKeysSettings = Gio.Settings.new(self.SCHEMA_MEDIA_KEYS);
+        mediaKeysSettings.set_strv(self.KEY_CUSTOM_KEYBINDS, customKeybinds + [newCustomKeybindSetting.props.path]);
+        mediaKeysSettings.sync();
+
+    def disable(self, mediaKeysSettings: Gio.Settings) -> int:
+        mediaKeysSettings = Gio.Settings.new(self.SCHEMA_MEDIA_KEYS);
+        customKeybinds = mediaKeysSettings.get_strv(self.KEY_CUSTOM_KEYBINDS);
+        for customKeybind in customKeybinds:
+            customKeybindSettings = Gio.Settings.new_with_path(self.SCHEMA_CUSTOM_KEYBINDS, customKeybind);
+            if (customKeybindSettings.get_string(self.KEY_BINDING) == self.entryBinding and
+                customKeybindSettings.get_string(self.KEY_NAME) == self.entryName):
+                if (self.purge):
+                    action = "Purging";
+                    customKeybinds.remove(customKeybind);
+                else:
+                    action = "Disabling";
+                    customKeybindSettings.set_string(self.KEY_BINDING, "");
+                print(f"{action} custom keybind {customKeybindSettings.props.path}")
+                break;
+        mediaKeysSettings.set_strv(self.KEY_CUSTOM_KEYBINDS, customKeybinds);
+
+    def run(self) -> int:
+        subcommand: typing.Callable[[Gio.Settings], int] = getattr(self, self.subcommand);
+
+        mediaKeysSettings = Gio.Settings.new(self.SCHEMA_MEDIA_KEYS);
+        return subcommand(mediaKeysSettings);
 
 if (__name__ == "__main__"):
-    main();
+    parser = MenuKeybinder.createArgumentParser();
+
+    argcomplete.autocomplete(parser);
+    menuKeybinder = parser.parse_args(namespace=MenuKeybinder());
+
+    sys.exit(menuKeybinder.run());
