--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,6 +2,21 @@
 	"version": "2.0.0",
 	"tasks": [
     {
+      "type": "shell",
+      "label": "open-example",
+
+      "command": ["code", "-n", "/home/nummer42o/Downloads/getting-started-tutorial"],
+
+      "group": "none",
+      "presentation": {
+        "reveal": "never",
+        "close": true
+      },
+      "problemMatcher": [],
+      "runOptions": {"runOn": "folderOpen"},
+      "hide": true
+    },
+    {
       "type": "cmake",
       "label": "Build",
       "detail": "CMake build task.",
