--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,6 @@ cmake_minimum_required(VERSION 3.16)
 target_sources(shutdown_menu
   PUBLIC
     main.c
-    dialog.c
+    # dialog.c
+    application.c
 )
