--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
         "close": true
       },
       "problemMatcher": [],
-      "runOptions": {"runOn": "folderOpen"},
+      // "runOptions": {"runOn": "folderOpen"},
       "hide": true
     },
     {
